# haskell_test_docker

./: Dockerfile  Main.hs  Test.hs  my-haskell-app.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
