name:                my-haskell-app
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable my-haskell-app
    main-is:             Main.hs
    build-depends:       base >=4.7 && <5
    default-language:    Haskell2010

test-suite my-haskell-app-test
  type:                exitcode-stdio-1.0
  main-is:            Test.hs
  build-depends:       base >=4.7 && <5,
                       HUnit >= 1.6.0.0
  default-language:    Haskell2010
